# spin-deps-image-manipulation

./: .gitignore  readme.md  spin.toml
.wit/components/image-manipulation-http-rs/: deps.wit
frontend/: index.html
image-manipulation-http-rs/: Cargo.toml
image-manipulation-http-rs/src/: lib.rs
image-manipulation-http-rs/src/bindings/: deps.rs
image-manipulation-http-ts/: knitwit.json  package-lock.json  package.json
image-manipulation-http-ts/combined-wit/: world.wit
image-manipulation-http-ts/src/: index.ts
lib/: Cargo.toml
lib/src/: bindings.rs  lib.rs
lib/wit/: world.wit
