[package]
name = "image-manipulation-http-rs"
authors = ["Radu Matei <radu@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
spin-sdk = "3.0.1"
wit-bindgen = "0.34.0"

[workspace]
