[package]
name = "image-manipulation-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.34.0", features = ["bitflags"] }
photon-rs = { default-features = false, git = "https://github.com/silvia-odwyer/photon", rev = "8b17f68579e1b17edf3428a5ffcd22b4f99af6ec" }


[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:image-manipulation-lib"

[package.metadata.component.dependencies]
